# KataiLink

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: pr-check.yml  publish-ghcr.yml
src/: config.rs  main.rs  model.rs
src/provider/: codex_cli.rs  mod.rs
