[package]
name = "katai_link"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
env_logger = "0.11"
log = "0.4"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "process", "sync", "time"] }
url = "2"

